--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -2138,6 +2138,8 @@
     "tags": []
    },
    "source": [
+    "---\n",
+    "\n",
     "## Transformer\n",
     "\n",
     "参考：\n",
@@ -2218,6 +2220,8 @@
    "id": "c332d6e1-dc72-4738-a48b-8de346e2dd3c",
    "metadata": {},
    "source": [
+    "----\n",
+    "\n",
     "### Configuration"
    ]
   },
@@ -2232,11 +2236,10 @@
     "\n",
     "### Tokenizer\n",
     "\n",
-    "接口文档 [Transformer-Tokenizer](https://huggingface.co/docs/transformers/v4.17.0/en/main_classes/tokenizer).\n",
-    "\n",
     "有关 tokenizer 的使用，可以参考如下官方教程\n",
     "+ [Tutorials --> Preprocess -> NLP](https://huggingface.co/docs/transformers/preprocessing#nlp)\n",
     "+ [Conceptual Guide --> Glossary -> Model inputs](https://huggingface.co/docs/transformers/glossary#model-inputs)\n",
+    "+ 接口文档[Transformer-Tokenizer](https://huggingface.co/docs/transformers/v4.17.0/en/main_classes/tokenizer)\n",
     "\n",
     "`Tokenizer`类是处理transformer结构输入的主要类，它用于将文本类的数据转换成transformer结构能够接受的序列数据.  \n",
     "\n",
@@ -2287,7 +2290,7 @@
    "source": [
     "#### `PreTrainedTokenizer`\n",
     "\n",
-    "该类是所有slow tokenizer的基类，有如下常用的方法：\n",
+    "该类是所有**slow tokenizer**的基类，有如下常用的方法：\n",
     "\n",
     "##### `__call__()`\n",
     "\n",
@@ -2296,7 +2299,7 @@
     "  + `str`，单个句子\n",
     "  + `List[str]`，多个句子。注意，如果这里是 list of word 的形式，那么需要设置`is_split_into_words=True`。\n",
     "  + `List[List[str]]`，一个batch的句子\n",
-    "+ `text_pair`，**可选**，可接受的输入类型同`text`，**这里传入的句子会和 `text` 里的句子组成一对**。\n",
+    "+ `text_pair`，**可选**，可接受的输入类型同`text`，**这里传入的句子会和 `text` 里的句子组成一对**，常用于QA或者翻译任务中。\n",
     "+ `max_length`：设置可接受的最大句子长度\n",
     "+ `padding`，补全策略，有如下几种输入：\n",
     "  + `True` or `longest`，使用padding，此时按照最长的句子进行padding\n",
@@ -2347,7 +2350,14 @@
    "source": [
     "#### `PreTrainedTokenizerFast`\n",
     "\n",
-    "快速分词的实现基类，它依赖于`tokenizer`包，它提供的接口和`PreTrainedTokenizer`类似，多了如下的两个方法：\n",
+    "快速分词的实现基类，它依赖于`tokenizer`包。\n",
+    "\n",
+    "相比与`PreTrainedTokenizer`类，它的初始化方法里，多了两个参数：\n",
+    "+ `tokenizer_object`：是一个`tokenizer.Tokenizer`对象，它是快速分词底层使用的分词器。   \n",
+    "  **如果使用自己训练的快速tokenizer时，就需要使用这个参数来实例化一个transformer使用的分词对象**。\n",
+    "+ `tokenizer_file`：指定`tokenizer.Tokenizer`保存的json对象\n",
+    "\n",
+    "它提供的接口和`PreTrainedTokenizer`类似，多了如下的两个方法：\n",
     "\n",
     "+ `batch_decode()`\n",
     "+ `train_new_from_iterator()`\n",
@@ -2379,10 +2389,24 @@
     "  主要用于成对句子\n",
     "\n",
     "+ `tokens(batch_index=0)`：返回指定batch里，句子进行分词后的token\n",
-    "\n",
     "+ `words(batch_index=0)`：返回句子中每个token的位置索引\n",
+    "+ `word_ids(batch_index=0)`：这个和`words()`一样，后续会被取代。\n",
     "\n",
-    "+ `word_ids(batch_index=0)`：这个和上面的好像没有区别\n"
+    "> token 和 word 区别在于，使用wordPiece之类的分词模型时，对于一些特殊的词，比如 `Titan RTX`，划分得到的token是: `'titan', 'rt', '##x'`，但是原始的word是 `'titan', 'rtx'`，此时的word_ids 就是用来表示 token 和 原来的 word 之间的对应关系：`[0, 1, 1]`，两个 1 表示 `rt`, `##x` 对应的是原来的一个 word。\n",
+    "\n",
+    "+ `token_to_word()`：指定位置的 token 对应于原始文本中的word索引\n",
+    "\n",
+    "+ `word_to_tokens()`：指定位置的 word 对应的 token 的起止索引，因为一个word可能被分成多个token，所以是复数\n",
+    "\n",
+    "+ `token_to_sequence()`：指定位置的 token 属于sequence中的哪个部分，只返回 {0, 1}\n",
+    "\n",
+    "+ `token_to_chars()`\n",
+    "\n",
+    "+ `word_to_chars()`\n",
+    "\n",
+    "+ `char_to_token()`\n",
+    "\n",
+    "+ `char_to_word()`"
    ]
   },
   {
@@ -2395,7 +2419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6e5ceb1c-c54d-4398-9323-d37ef43e46fb",
    "metadata": {},
    "outputs": [
@@ -2413,7 +2437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "insured-place",
    "metadata": {},
    "outputs": [
@@ -2423,7 +2447,7 @@
        "'D:\\\\Project-Workspace\\\\Python-Projects\\\\DataAnalysis'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2434,7 +2458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "cdc19405-01f0-4f7d-9f4e-da2cab7c115a",
    "metadata": {},
    "outputs": [],
@@ -2448,8 +2472,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a4c1272a-58d5-4e1f-b393-5f0dcef243f7",
+   "metadata": {},
+   "source": [
+    "+ 需要注意，这里的tokenizer类型不是`tokenizer.Tokenizer`类，只有fast里的`.backend_tokenizer`是"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
+   "id": "558bdd8f-dc26-470a-979e-67472fdf8bb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tokenizer.__class__:        <class 'transformers.models.bert.tokenization_bert.BertTokenizer'>\n",
+      "tokenizer.basic_tokenizer:  <transformers.models.bert.tokenization_bert.BasicTokenizer object at 0x0000019C0F00CEB0>\n",
+      "tokenizer_fast.__class__:   <class 'transformers.models.bert.tokenization_bert_fast.BertTokenizerFast'>\n",
+      "tokenizer_fast.backend_tokenizer:  <tokenizers.Tokenizer object at 0x0000019C0D78B090>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('tokenizer.__class__:       ', tokenizer.__class__)\n",
+    "print('tokenizer.basic_tokenizer: ', tokenizer.basic_tokenizer)\n",
+    "print('tokenizer_fast.__class__:  ', tokenizer_fast.__class__)\n",
+    "\n",
+    "# 快速版本没有 basic_tokenizer 属性, 只有 backend_tokenizer\n",
+    "# print('tokenizer_fast.basic_tokenizer: ', tokenizer_fast.basic_tokenizer)\n",
+    "print('tokenizer_fast.backend_tokenizer: ', tokenizer_fast.backend_tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "eaf330e3-c290-487a-998c-0aa5283dc1ca",
    "metadata": {},
    "outputs": [
@@ -2473,33 +2532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "558bdd8f-dc26-470a-979e-67472fdf8bb4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tokenizer.__class__:        <class 'transformers.models.bert.tokenization_bert.BertTokenizer'>\n",
-      "tokenizer.basic_tokenizer:  <transformers.models.bert.tokenization_bert.BasicTokenizer object at 0x000001D8831A6308>\n",
-      "tokenizer_fast.__class__:   <class 'transformers.models.bert.tokenization_bert_fast.BertTokenizerFast'>\n",
-      "tokenizer_fast.backend_tokenizer:  <tokenizers.Tokenizer object at 0x000001D8813652F0>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('tokenizer.__class__:       ', tokenizer.__class__)\n",
-    "print('tokenizer.basic_tokenizer: ', tokenizer.basic_tokenizer)\n",
-    "print('tokenizer_fast.__class__:  ', tokenizer_fast.__class__)\n",
-    "# 快速版本没有 basic_tokenizer 属性, 只有 backend_tokenizer\n",
-    "# print('tokenizer_fast.basic_tokenizer: ', tokenizer_fast.basic_tokenizer)\n",
-    "print('tokenizer_fast.backend_tokenizer: ', tokenizer_fast.backend_tokenizer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "c0b9056f-154d-46b1-aeea-81d0b9b00355",
    "metadata": {},
    "outputs": [
@@ -2524,7 +2557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "7b5a795c-3c6e-4459-b7e3-32e5e57cf548",
    "metadata": {},
    "outputs": [
@@ -2557,7 +2590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "fb467534-a310-4669-86ab-9c0484d106d0",
    "metadata": {},
    "outputs": [
@@ -2566,8 +2599,8 @@
      "output_type": "stream",
      "text": [
       "tokenized_words:  ['a', 'titan', 'rt', '##x', 'has', '24', '##gb', 'of', 'vr', '##am']\n",
-      "tokenized_ids:  [101, 1037, 16537, 19387, 2595, 2038, 2484, 18259, 1997, 27830, 3286, 102]\n",
-      "decoded_tokens:  [CLS] a titan rtx has 24gb of vram [SEP]\n"
+      "tokenized_ids:    [101, 1037, 16537, 19387, 2595, 2038, 2484, 18259, 1997, 27830, 3286, 102]\n",
+      "decoded_tokens:   [CLS] a titan rtx has 24gb of vram [SEP]\n"
      ]
     }
    ],
@@ -2580,16 +2613,16 @@
     "\n",
     "# 查看分词后的 tokens id\n",
     "tokenized_ids = tokenizer.encode(sentence)\n",
-    "print(\"tokenized_ids: \", tokenized_ids)\n",
+    "print(\"tokenized_ids:   \", tokenized_ids)\n",
     "\n",
     "# 从 token id 映射回 token\n",
     "decoded_tokens = tokenizer.decode(tokenized_ids)\n",
-    "print(\"decoded_tokens: \", decoded_tokens)"
+    "print(\"decoded_tokens:  \", decoded_tokens)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "9a063a11-2daf-4f94-a093-3e58b0e1ca34",
    "metadata": {},
    "outputs": [
@@ -2598,7 +2631,7 @@
      "output_type": "stream",
      "text": [
       "batch_encoding.__class__:  <class 'transformers.tokenization_utils_base.BatchEncoding'>\n",
-      "input_ids:  [101, 1037, 16537, 19387, 2595, 2038, 2484, 18259, 1997, 27830, 3286, 102]\n",
+      "input_ids:       [101, 1037, 16537, 19387, 2595, 2038, 2484, 18259, 1997, 27830, 3286, 102]\n",
       "attention_mask:  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
       "token_type_ids:  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
      ]
@@ -2608,14 +2641,14 @@
     "# 直接调用 __call__() 方法，可以得到分词后的所有信息，一步到位\n",
     "batch_encoding = tokenizer(sentence)\n",
     "print('batch_encoding.__class__: ', batch_encoding.__class__)\n",
-    "print(\"input_ids: \", batch_encoding['input_ids'])\n",
+    "print(\"input_ids:      \", batch_encoding['input_ids'])\n",
     "print(\"attention_mask: \", batch_encoding['attention_mask'])\n",
     "print(\"token_type_ids: \", batch_encoding['token_type_ids'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "5cb7bf9e-586b-4f0f-b18f-4880101d4758",
    "metadata": {},
    "outputs": [
@@ -2624,7 +2657,7 @@
      "output_type": "stream",
      "text": [
       "batch_encoding.__class__:  <class 'transformers.tokenization_utils_base.BatchEncoding'>\n",
-      "input_ids:  [101, 1037, 16537, 19387, 2595, 2038, 2484, 18259, 1997, 27830, 3286, 102]\n",
+      "input_ids:       [101, 1037, 16537, 19387, 2595, 2038, 2484, 18259, 1997, 27830, 3286, 102]\n",
       "attention_mask:  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
       "token_type_ids:  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
      ]
@@ -2634,7 +2667,7 @@
     "# 使用 fast 版本分词\n",
     "batch_encoding = tokenizer_fast(sentence)\n",
     "print('batch_encoding.__class__: ', batch_encoding.__class__)\n",
-    "print(\"input_ids: \", batch_encoding['input_ids'])\n",
+    "print(\"input_ids:      \", batch_encoding['input_ids'])\n",
     "print(\"attention_mask: \", batch_encoding['attention_mask'])\n",
     "print(\"token_type_ids: \", batch_encoding['token_type_ids'])"
    ]
@@ -2644,12 +2677,12 @@
    "id": "53ebabe8-b7fa-414b-a01b-32dfacbc21a1",
    "metadata": {},
    "source": [
-    "+ 多个长度不一样的句子要使用 padding，并且由 attention_mask 区分"
+    "+ 多个长度不一样的句子要使用 padding，并且由 attention_mask 区分padding的词和正常词"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "conscious-polls",
    "metadata": {},
    "outputs": [
@@ -2658,8 +2691,8 @@
      "output_type": "stream",
      "text": [
       "s1.length:  18 ; s2.length:  18\n",
-      "s1['input_ids']:  [101, 2023, 2003, 1037, 2460, 6251, 102, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "s2['input_ids']:  [101, 2023, 2003, 1037, 2738, 2936, 5537, 1012, 2009, 2003, 2012, 2560, 2936, 2084, 1996, 5537, 1015, 102]\n",
+      "s1['input_ids']:       [101, 2023, 2003, 1037, 2460, 6251, 102, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "s2['input_ids']:       [101, 2023, 2003, 1037, 2738, 2936, 5537, 1012, 2009, 2003, 2012, 2560, 2936, 2084, 1996, 5537, 1015, 102]\n",
       "s1['attention_mask']:  [1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
       "s2['attention_mask']:  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
      ]
@@ -2672,8 +2705,8 @@
     "batch_encoding = tokenizer([s1, s2], padding=True)\n",
     "\n",
     "print(\"s1.length: \", len(batch_encoding['input_ids'][0]), \"; s2.length: \", len(batch_encoding['input_ids'][1]))\n",
-    "print(\"s1['input_ids']: \", batch_encoding['input_ids'][0])\n",
-    "print(\"s2['input_ids']: \", batch_encoding['input_ids'][1])\n",
+    "print(\"s1['input_ids']:      \", batch_encoding['input_ids'][0])\n",
+    "print(\"s2['input_ids']:      \", batch_encoding['input_ids'][1])\n",
     "print(\"s1['attention_mask']: \", batch_encoding['attention_mask'][0])\n",
     "print(\"s2['attention_mask']: \", batch_encoding['attention_mask'][1])"
    ]
@@ -2773,7 +2806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "120d73c2-2dac-47ad-9b07-0e369e2b9e2a",
    "metadata": {},
    "outputs": [
@@ -2786,15 +2819,34 @@
     }
    ],
    "source": [
-    "s1 = \"this is a short sentence\"\n",
-    "s2 = \"This is a rather longer sequence\"\n",
+    "s1 = \"A Titan RTX has 24GB of VRAM\"\n",
+    "s2 = \"This is a rather longer sequence than sequence s1\"\n",
     "batch_encoding = tokenizer_fast(text=s1, text_pair=s2, padding=True)\n",
     "print(batch_encoding.__class__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
+   "id": "53e6b67b-0e0a-4675-a34b-8bed156f8215",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[None, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, None, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, None]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 查看指定批次的句子的 前后关系，0 表示属于第一个句子，1表示属于第二个句子\n",
+    "print(batch_encoding.sequence_ids(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "a63c79fc-bd6f-48a3-806b-34386cf927a1",
    "metadata": {
     "tags": []
@@ -2804,7 +2856,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['[CLS]', 'this', 'is', 'a', 'short', 'sentence', '[SEP]', 'this', 'is', 'a', 'rather', 'longer', 'sequence', '[SEP]']\n"
+      "['[CLS]', 'a', 'titan', 'rt', '##x', 'has', '24', '##gb', 'of', 'vr', '##am', '[SEP]', 'this', 'is', 'a', 'rather', 'longer', 'sequence', 'than', 'sequence', 's', '##1', '[SEP]']\n"
      ]
     }
    ],
@@ -2816,63 +2868,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "53e6b67b-0e0a-4675-a34b-8bed156f8215",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[None, 0, 0, 0, 0, 0, None, 1, 1, 1, 1, 1, 1, None]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 查看指定批次的句子的 前后关系，0 表示属于第一个句子，1表示属于第二个句子\n",
-    "print(batch_encoding.sequence_ids(0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "id": "0549d144-98bc-45be-bf50-cc5c059693c1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[None, 0, 1, 2, 3, 4, None, 0, 1, 2, 3, 4, 5, None]"
+       "[None, 0, 1, 2, 2, 3, 4, 4, 5, 6, 6, None, 0, 1, 2, 3, 4, 5, 6, 7, 8, 8, None]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "batch_encoding.words(0)"
+    "# word_ids 表示的是上面划分的token，对应与原来文本中的哪个词的index，比如 2, 2 表示上面的 rt, ##x 在原始文本中是同一个word。\n",
+    "batch_encoding.word_ids(0)\n",
+    "# 下面的会被取代\n",
+    "# batch_encoding.words(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "72f7065b-c095-47d2-a234-b7812b590e25",
+   "execution_count": 37,
+   "id": "1284d117-3d9f-4687-a68b-14d00c708609",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[None, 0, 1, 2, 3, 4, None, 0, 1, 2, 3, 4, 5, None]"
+       "2"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "batch_encoding.word_ids(0)"
+    "# 这里只有 1 个记录，所以传入的被当做 token_index，返回的是对应index的token，对应于原始文本中的word的index\n",
+    "batch_encoding.token_to_word(batch_or_token_index=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "20ad0183-7e73-4306-ad87-7b630ba3ebeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TokenSpan(start=3, end=5)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 给出 第 2 个位置的word: RTX 对应的 token 起止位置\n",
+    "batch_encoding.word_to_tokens(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "79be51f2-c9f1-431a-badc-82d16f94a5d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 返回第 n 个 位置的 token，属于哪个序列\n",
+    "print(batch_encoding.token_to_sequence(5))\n",
+    "print(batch_encoding.token_to_sequence(15))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "d6af667f-7ec7-4fb6-a2fd-73dd972aa5a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CharSpan(start=12, end=15)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch_encoding.token_to_chars(5)"
    ]
   },
   {
@@ -3902,9 +4003,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Deep-Learning-Env",
    "language": "python",
-   "name": "python3"
+   "name": "deep-learning"
   },
   "language_info": {
    "codemirror_mode": {
