--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -2276,6 +2276,7 @@
     "+ `max_model_input_sizes`\n",
     "+ `max_len_single_sentence`\n",
     "+ `model_max_length`\n",
+    "+ **`is_fast`：是否为快速分词类**\n",
     "\n",
     "此外，还有一些特殊token的字符和id，比如：\n",
     "+ `pad_token`, `pad_token_id`\n",
@@ -2372,11 +2373,17 @@
    "source": [
     "#### BatchEncoding对象\n",
     "\n",
-    "它类似于一个dict，有如下重要的keys:\n",
+    "它有如下几个重要属性：\n",
+    "+ `data`：一个dict，存放分词后的数据，有如下重要的key:\n",
     "  + `input_ids`，分词后每个 token 对应 vocabulary 的 index —— 这个被**作为输入模型的数据**.\n",
     "  + `attention_mask`，表明填充的 token 位置，**填充位的 token 对应于 0**.  \n",
     "  因为一个batch中不同的句子长度不一样，短一些的句子会被padding成同样的长度，此时这些padding的位置需要被记录下来，用于告知模型这部分只是填充使用，不需要参与self-attention。\n",
-    "  + `token_type_ids`：通常用于**问答对**的句子中，它也是一个{0,1}掩码的形式，0表示属于问题的句子，1表示属于答案的句子\n",
+    "  + `token_type_ids`：**可选**，通常用于**问答对**的句子中，它也是一个{0,1}掩码的形式，0表示属于问题的句子，1表示属于答案的句子\n",
+    "  + `labels`：**可选**，翻译任务中会用到\n",
+    "  \n",
+    "+ `encoding`：`tokenizer.Encoding`类，对于fast-tokenizer来说，会存放一些特殊的信息\n",
+    "+ `is_fast`：是否为fast-tokenizer的结果\n",
+    "  \n",
     "  \n",
     "  \n",
     "常用的一些方法如下：\n",
@@ -4003,9 +4010,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Deep-Learning-Env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "deep-learning"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
