--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -497,7 +497,7 @@
    "cell_type": "markdown",
    "id": "8f8c0fa0-25e7-44fd-97dc-54cae69d9934",
    "metadata": {
-    "toc-hr-collapsed": true
+    "tags": []
    },
    "source": [
     "----\n",
@@ -509,7 +509,10 @@
     "详细介绍可以参考：\n",
     "+ github仓库 [datasets](https://github.com/huggingface/datasets)\n",
     "+ 官方文档 [Datasets](https://huggingface.co/docs/datasets/index)\n",
-    "+ 可用的datasets [datasets hub](https://huggingface.co/datasets)"
+    "+ 官方教程文档 [Course --> The datasets library](https://huggingface.co/course/chapter5/1?fw=pt)：这个作为入门介绍比较容易接受\n",
+    "\n",
+    "\n",
+    "可用的dataset [datasets hub](https://huggingface.co/datasets)"
    ]
   },
   {
@@ -2985,95 +2988,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65855261-a6a2-4274-8fc9-3bc39c503043",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "\n",
-    "### DataCollator\n",
-    "\n",
-    "官方文档：\n",
-    "+ [Data Collator](https://huggingface.co/docs/transformers/main_classes/data_collator)\n",
-    "\n",
-    "DataCollator 用于从 list of dataset elements 中生成一个 batch 的数据，同时对输入模型的数据进行一些预处理操作，比如用于 Masked Language Model 时，对输入的序列进行 Mask 处理。\n",
-    "\n",
-    "**这些类会检测 dataset 中是否有 `labels` 或者 `label_ids` 这两个特征，有的话，会单独处理**。\n",
-    "\n",
-    "DataCollator的输入是 list of dict-like 的内容，输出是一个 dict-like，每个 key 是一个特征，value 是 list，对应于该特征下的 batch。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "2913bf29-a7a7-4738-9cc8-aaecc07ea5f2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'labels': tensor([1, 2, 3]),\n",
-       " 'col-1': tensor([10, 11, 12]),\n",
-       " 'col-2': tensor([20, 21, 22])}"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 以 DefaultDataCollator 为例\n",
-    "from transformers import DefaultDataCollator\n",
-    "dc = DefaultDataCollator()\n",
-    "\n",
-    "data_list = [\n",
-    "    {'label': 1, 'col-1': 10, 'col-2': 20},\n",
-    "    {'label': 2, 'col-1': 11, 'col-2': 21},\n",
-    "    {'label': 3, 'col-1': 12, 'col-2': 22}\n",
-    "]\n",
-    "\n",
-    "dc_data = dc(data_list)\n",
-    "dc_data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "61c9e0a0-a95a-471a-950f-a88ed45b6030",
-   "metadata": {},
-   "source": [
-    "#### DataCollatorWithPadding\n",
-    "\n",
-    "用于动态对每个 batch 的样本进行 padding.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5bb8b109-4fdf-4132-8819-997e0211492c",
-   "metadata": {},
-   "source": [
-    "#### DataCollatorForLanguageModeling\n",
-    "\n",
-    "用于对 Language Model 的输入进行处理，比如对于BERT 的输入会执行 随机Mask 的操作.\n",
-    "\n",
-    "注意：\n",
-    "> 如果使用了 WordPiece 之类的分词器，获得 subword 时（比如 `hug`,`##ging` 之类的词），这个类 Mask 的是 subword，不会 Mask 整个word （这里是`hugging`）"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "28f5a2b1-08a0-4e70-94ad-61e8cc9fbc1a",
-   "metadata": {},
-   "source": [
-    "#### DataCollatorForWholeWordMask\n",
-    "\n",
-    "用于对 Language Model 的输入进行处理，比如对于BERT 的输入会执行 随机Mask 的操作.\n",
-    "\n",
-    "即使是使用 Subword 分词器，这个类 Mask 的还是整体的word ，不过要求其中的 subword 必须以指定的符号为前缀（比如`##`）"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "53b661f1-b46f-4ad2-8e76-b9b323f14f64",
    "metadata": {
     "tags": []
@@ -3988,15 +3902,159 @@
     "\n",
     "## 训练与Fint-Tune\n",
     "\n",
-    "huggingface-transformer官方提供了一个使用transformer的 [Course](https://huggingface.co/course/chapter0/1?fw=pt)，这个教程写的很不错。\n",
+    "huggingface官方提供了一个使用transformer的 [Course](https://huggingface.co/course/chapter0/1?fw=pt)，这个教程写的很不错。\n",
     "\n",
     "如果想自己训练一个模型，可以参考其中的如下内容：\n",
-    "+ [6. The Tokenizer Library](https://huggingface.co/course/chapter6/1?fw=pt)\n",
+    "+ [Course --> 6. The Tokenizer Library](https://huggingface.co/course/chapter6/1?fw=pt)\n",
     "  + [Training a new tokenizer from an old one](https://huggingface.co/course/chapter6/2?fw=pt#training-a-new-tokenizer-from-an-old-one)\n",
     "  + [Building a tokenizer, block by block](https://huggingface.co/course/chapter6/8?fw=pt#building-a-tokenizer-block-by-block)\n",
-    "+ [7. Main NLP Task](https://huggingface.co/course/chapter7/1?fw=pt)\n",
+    "+ [Course --> 7. Main NLP Task](https://huggingface.co/course/chapter7/1?fw=pt)\n",
     "  + [Fine-tuning a masked language model](https://huggingface.co/course/chapter7/3?fw=pt#finetuning-a-masked-language-model)\n",
-    "  + [Training a causal language model from scratch](https://huggingface.co/course/chapter7/6?fw=pt#training-a-causal-language-model-from-scratch)"
+    "  + [Training a causal language model from scratch](https://huggingface.co/course/chapter7/6?fw=pt#training-a-causal-language-model-from-scratch)\n",
+    "  \n",
+    "  \n",
+    "除了上述两个教程之外，huggingface在`transformer`模块里，还提供了如下类作为辅助工具：\n",
+    "+ `DataCollator`：用于补齐填充数据\n",
+    "+ `Trainer`：封装训练过程，**只适用于PyTorch**框架"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bd55dbb-6da6-4ec6-88b2-cfb035b8d896",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "----\n",
+    "\n",
+    "### DataCollator\n",
+    "\n",
+    "官方文档：\n",
+    "+ [API：Data Collator](https://huggingface.co/docs/transformers/main_classes/data_collator)\n",
+    "\n",
+    "DataCollator 用于从 list of dataset elements 中生成一个 batch 的数据，对该batch的数据进行如下的一些操作：\n",
+    "+ 对batch中的每个样本序列进行对齐padding操作 —— 注意，**这个序列对齐只针对某个batch，不同batch的序列长度可以是不一样的**\n",
+    "+ 用于 Masked Language Model 时，对输入的序列进行 Mask 处理"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "104331fc-f424-4885-8402-00728a70e949",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### DefaultDataCollator\n",
+    "默认的collator，**它会检测 dataset 中是否有 `labels` 或者 `label_ids` 这两个特征，有的话，会单独处理**。\n",
+    "\n",
+    "DataCollator的输入是 list of dict-like 的内容，输出是一个 dict-like，每个 key 是一个特征，value 是 list，对应于该特征下的 batch。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2913bf29-a7a7-4738-9cc8-aaecc07ea5f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'labels': tensor([1, 2, 3]),\n",
+       " 'col-1': tensor([10, 11, 12]),\n",
+       " 'col-2': tensor([20, 21, 22])}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 以 DefaultDataCollator 为例\n",
+    "from transformers import DefaultDataCollator\n",
+    "dc = DefaultDataCollator()\n",
+    "\n",
+    "data_list = [\n",
+    "    {'label': 1, 'col-1': 10, 'col-2': 20},\n",
+    "    {'label': 2, 'col-1': 11, 'col-2': 21},\n",
+    "    {'label': 3, 'col-1': 12, 'col-2': 22}\n",
+    "]\n",
+    "\n",
+    "dc_data = dc(data_list)\n",
+    "dc_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0908c577-2e06-47d1-ba27-c5ad1f5d2b19",
+   "metadata": {},
+   "source": [
+    "#### DataCollatorWithPadding\n",
+    "\n",
+    "用于动态对每个 batch 的样本进行 padding.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de91c2bb-3b90-4e67-b11c-a3c1aa9c5d49",
+   "metadata": {},
+   "source": [
+    "#### DataCollatorForLanguageModeling\n",
+    "\n",
+    "用于对 Language Model 的输入进行处理，比如对于BERT 的输入会执行 随机Mask 的操作.\n",
+    "\n",
+    "注意：\n",
+    "> 如果使用了 WordPiece 之类的分词器，获得 subword 时（比如 `hug`,`##ging` 之类的词），这个类 Mask 的是 subword，不会 Mask 整个word （这里是`hugging`）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8163c4c-7dc8-4fdd-9fd9-e0ff96c1a8e8",
+   "metadata": {},
+   "source": [
+    "#### DataCollatorForWholeWordMask\n",
+    "\n",
+    "用于对 Language Model 的输入进行处理，比如对于BERT 的输入会执行 随机Mask 的操作.\n",
+    "\n",
+    "即使是使用 Subword 分词器，这个类 Mask 的还是整体的word ，不过要求其中的 subword 必须以指定的符号为前缀（比如`##`）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "018520f6-91e7-4e24-a390-6382f84288b0",
+   "metadata": {},
+   "source": [
+    "-----\n",
+    "### Trainer\n",
+    "\n",
+    "官方文档：\n",
+    "+ [Transormer --> Main Class --> Trainer](https://huggingface.co/docs/transformers/v4.25.1/en/main_classes/trainer#transformers.Trainer)：API文档\n",
+    "+ [Transformer --> Tutorial --> Fine-tune a pretrained model](https://huggingface.co/docs/transformers/training#train-with-pytorch-trainer)：`transformer`包的教程，比较详细，除了介绍`Trainer`的使用外，还有 Keras 和原始 pytorch 的训练代码\n",
+    "+ [Cource --> 3. Fine-Tuning a pretrained model --> Fine-tuning a model with the Trainer API](https://huggingface.co/course/chapter3/3?fw=pt#fine-tuning-a-model-with-the-trainer-api)：Course里的Trainer教程，可以作为上面教程的补充\n",
+    "\n",
+    "\n",
+    "Trainer-API的使用主要分为两个部分：\n",
+    "1. 使用`TrainingArguments`类封装所有的超参数，具体参数可以查看该类的API文档 [Trainer --> TrainingArguments](https://huggingface.co/docs/transformers/v4.25.1/en/main_classes/trainer#transformers.TrainingArguments)\n",
+    "2. 实例化`Trainer`类\n",
+    "\n",
+    "Trainer-API 主要提供了如下 **两组** 共 **4 个类**：\n",
+    "+ `TrainingArguments` + `Trainer`，用于普通模型的训练\n",
+    "+ `Seq2SeqTrainingArguments` + `Seq2SeqTrainer`：用于序列模型的训练，这两个类分别继承了上面的类，`Seq2SeqTrainingArguments`扩充了几个属性，`Seq2SeqTrainer` 重写了几个父类方法\n",
+    "\n",
+    "如果要自定义一些训练流程，可以继承`Trainer`类，然后重写其中的如下方法：\n",
+    "+ `trainning_step()`\n",
+    "+ `compute_loss()`\n",
+    "+ `evaluate()`\n",
+    "+ `prediction_step()`\n",
+    "+ `predict()`\n",
+    "\n",
+    "需要注意的是，Trainer-API是专门为`transformer`包里的模型定制的训练流程，所以继承重写上述方法的时候，需要遵循一些约定，否则Trainer-API会出现意想不到的结果\n",
+    "\n",
+    "\n",
+    "> **稍微看了下`Trainer`的源码，发现其中添加了许多逻辑，比如参数检查，最大batch_size的检查，各种回调方法，多GPU的支持，梯度修剪等等。  \n",
+    "我的感觉是，这个API可以用，但是不要滥用，其中封装了许多对于初学者来说不必要的逻辑。  \n",
+    "不过如果作为研究的对象还不错，其中有许多优化求解的操作，应该值得研究。**\n"
    ]
   },
   {
