huggingface-transformer的各种collator总结整理

--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -58,9 +58,12 @@
    "source": [
     "import os\n",
     "# 项目本地数据集文件夹\n",
-    "LOCAL_DATA_PATH = r\"D:\\Project-Workspace\\Python-Projects\\DataAnalysis\\local-datasets\"\n",
+    "# LOCAL_DATA_PATH = r\"D:\\Project-Workspace\\Python-Projects\\DataAnalysis\\local-datasets\"\n",
     "# 本地模型文件夹\n",
-    "LOCAL_MODELS_PATH = r\"D:\\Project-Workspace\\Python-Projects\\DataAnalysis\\bert-pretrained-models\""
+    "# LOCAL_MODELS_PATH = r\"D:\\Project-Workspace\\Python-Projects\\DataAnalysis\\bert-pretrained-models\"\n",
+    "\n",
+    "LOCAL_DATA_PATH = r\"C:\\Users\\Drivi\\Python-Projects\\DataAnalysis\\local-datasets\"\n",
+    "LOCAL_MODELS_PATH = r\"C:\\Users\\Drivi\\Python-Projects\\DataAnalysis\\bert-pretrained-models\""
    ]
   },
   {
@@ -2727,16 +2730,25 @@
     "  + `str`，单个句子\n",
     "  + `List[str]`，多个句子。注意，如果这里是 list of word 的形式，那么需要设置`is_split_into_words=True`。\n",
     "  + `List[List[str]]`，一个batch的句子\n",
-    "+ `text_pair`，**可选**，可接受的输入类型同`text`，**这里传入的句子会和 `text` 里的句子组成一对**，常用于QA或者翻译任务中。\n",
+    "+ `text_pair`，**可选**，可接受的输入类型同`text`，**这里传入的句子会和 `text` 里的句子组成一对**，常用于QA等任务中。\n",
+    "\n",
+    "> **`text` 和 `text_pair` 输入的成对语句，在经过分词后，会被拼接到一起，前后的句子分词后的结果，可以通过返回的 `token_type_ids` 来进行区分**\n",
+    "\n",
     "+ `text_target`：这个是用于翻译之类的任务中，`text`对应的目标序列\n",
-    "+ `text_pair_target`\n",
+    "\n",
+    "> **`text` 和 `text_target` 输入的这对语句，在经过分词后，`text` 的分词结果照常放入`input_id`里，但是`text_target`的分词结果，会被放到`labels`里**\n",
+    "\n",
+    "+ `text_pair_target`:\n",
+    "\n",
     "+ `add_special_tokens`：bool值，默认`True`\n",
     "+ `max_length`：设置可接受的最大句子长度\n",
     "\n",
     "+ `padding`，填充策略，有如下几种输入：\n",
-    "  + `False` 或者 `do_not_pad`，不做padding，这是**默认值**。此时返回的数据中，一个batch中的各个句子会有不同的长度。\n",
-    "  + `True` or `longest`，使用padding，此时按照**每个batch中**最长的句子进行padding\n",
+    "  + `False` 或者 `do_not_pad`，不做padding，这是**默认值**。此时返回的数据中，当前batch中的各个句子会有不同的长度。\n",
+    "  + `True` or `longest`，使用padding，此时按照**当前batch中**最长的句子进行padding\n",
     "  + `max_length`，按照初始化指定的`max_length`参数或者模型的`model_max_length`填充\n",
+    "\n",
+    "> **通常不太会在tokenizer这里进行padding，更好的做法是，在进行training时，使用**Collator**来在每个 batch 里做 dynamic padding，并且进行一些额外的处理操作**\n",
     "\n",
     "+ `truncation`，指定截断的策略\n",
     "  + `False` 或者 `do_not_truncate`，**默认值**，不做截断\n",
@@ -2867,7 +2879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 68,
    "id": "cdc19405-01f0-4f7d-9f4e-da2cab7c115a",
    "metadata": {},
    "outputs": [],
@@ -3085,7 +3097,7 @@
    "id": "53ebabe8-b7fa-414b-a01b-32dfacbc21a1",
    "metadata": {},
    "source": [
-    "+ 多个长度不一样的句子要使用 padding，并且由 attention_mask 区分padding的词和正常词"
+    "+ 多个长度不一样的句子可以使用 padding，并且由 attention_mask 区分padding的词和正常词"
    ]
   },
   {
@@ -3124,8 +3136,7 @@
    "id": "b9b0cc47-bc49-4a25-95b2-ceb5cf1fbedf",
    "metadata": {},
    "source": [
-    "+ 对**成对句子**进行分词  \n",
-    "此时`toke_type_ids`就起作用了。"
+    "+ 对**成对句子**进行分词，使用`text_pair`参数传入第二个句子，此时`toke_type_ids`就起作用了。"
    ]
   },
   {
@@ -3202,6 +3213,47 @@
     "print('input_ids : ', batch_encoding['input_ids'])\n",
     "print('token_type_ids : ', batch_encoding['token_type_ids'])\n",
     "print('attention_mask : ', batch_encoding['attention_mask'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ed8eef8-95a5-4bae-9742-a297ad4e2c9f",
+   "metadata": {},
+   "source": [
+    "+ 翻译任务的目标句子：使用`text_target`参数.\n",
+    "\n",
+    "这里以 bert-tokenizer 为例，它会将 `text_target=`  的句子放到 `labels` 里，而不是和第一个句子的拼接在一起。   \n",
+    "这里的 bert-tokenizer 其实对于target没做啥特殊的事情，但是对于翻译任务来说，text_target 的语言是另一个，会使用另一个分词模型，这时候就有区别了。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "ddd0d78f-b1cd-467f-a76e-04d3436c6427",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_ids :  [101, 2023, 2003, 1996, 3120, 6251, 102]\n",
+      "token_type_ids :  [0, 0, 0, 0, 0, 0, 0]\n",
+      "attention_mask :  [1, 1, 1, 1, 1, 1, 1]\n",
+      "labels :  [101, 4539, 6251, 2005, 3120, 102]\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"this is the source sentence\"\n",
+    "text_target = \"target sentence for source\"\n",
+    "\n",
+    "batch_encoding = tokenizer(text=text, text_target=text_target)\n",
+    "\n",
+    "print('input_ids : ', batch_encoding['input_ids'])\n",
+    "print('token_type_ids : ', batch_encoding['token_type_ids'])\n",
+    "print('attention_mask : ', batch_encoding['attention_mask'])\n",
+    "# 多了一个 labels 属性\n",
+    "print('labels : ', batch_encoding['labels'])"
    ]
   },
   {
@@ -3423,7 +3475,8 @@
    "cell_type": "markdown",
    "id": "92032d02-a793-406e-980c-96a48711b739",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "toc-hr-collapsed": true
    },
    "source": [
     "### BERT\n",
@@ -4332,7 +4385,10 @@
     "\n",
     "DataCollator 用于从 list of dataset elements 中生成一个 batch 的数据，对该batch的数据进行如下的一些操作：\n",
     "+ 对batch中的每个样本序列进行对齐padding操作 —— 注意，**这个序列对齐只针对某个batch，不同batch的序列长度可以是不一样的**\n",
-    "+ 用于 Masked Language Model 时，对输入的序列进行 Mask 处理"
+    "+ 用于 Masked Language Model 时，对输入的序列进行 Mask 处理\n",
+    "+ 对翻译任务的 labels 进行 padding\n",
+    "\n",
+    "一般说来，Data Collator 会根据不同的任务，对输入的序列进行相应特殊处理的步骤，这里的输入序列，通常是经过 tokenizer 分词的。"
    ]
   },
   {
@@ -4394,6 +4450,221 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "bbd06ca1-fc22-4cab-87a9-9ff0eb08896b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import DataCollatorWithPadding, BertTokenizer\n",
+    "from datasets import Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "a2a5cd31-75e0-412c-8da4-b8cc0424eaca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['text'],\n",
+       "    num_rows: 3\n",
+       "})"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 手动构造数据\n",
+    "d = {\n",
+    "    'text': ['we get samples of varying length', 'test dynamic padding', 'this is another sentence.']\n",
+    "}\n",
+    "ds = Dataset.from_dict(d)\n",
+    "ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "b9c7b36a-a363-44ea-8dd6-6aa978ff4181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_path = os.path.join(LOCAL_MODELS_PATH, 'bert-base-uncased')\n",
+    "tokenizer = BertTokenizer.from_pretrained(model_path)\n",
+    "\n",
+    "def preprocess(samples):\n",
+    "    # 这里没有使用 padding 参数\n",
+    "    return tokenizer(samples['text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "a9c9fcb9-4c64-48d8-bb36-ec34bed595f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "622340af90a54b3097ef39b7deedec95",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ds_token = ds.map(preprocess, batched=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "d11e6954-6c54-4ca8-b0f1-7636981cd9e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'text': 'we get samples of varying length'}"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "373b3609-7e00-48ff-83a3-aba49d7635a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'text': 'we get samples of varying length',\n",
+       " 'input_ids': [101, 2057, 2131, 8168, 1997, 9671, 3091, 102],\n",
+       " 'token_type_ids': [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1]}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds_token[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "01324c45-70ab-4235-8a8a-159a8f7a2818",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 6, 7]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[len(sentence['input_ids']) for sentence in ds_token]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "312c422a-802f-453b-918f-529fa2950271",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 开始padding\n",
+    "collator = DataCollatorWithPadding(tokenizer=tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "675d4d2c-f06e-4778-a13e-ff7cf8c13d80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# collator 不能直接使用 Dataset，所以先转成了dict\n",
+    "ds_token_dict = {k: v for k, v in ds_token[:].items() if k != 'text'}\n",
+    "ds_collated = collator(ds_token_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "e9dbf35c-0590-402a-a7ba-cf35a19041ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[  101,  2057,  2131,  8168,  1997,  9671,  3091,   102],\n",
+       "        [  101,  3231,  8790, 11687,  4667,   102,     0,     0],\n",
+       "        [  101,  2023,  2003,  2178,  6251,  1012,   102,     0]])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds_collated['input_ids']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "44135653-4e1a-413a-9b27-92a49a1aa284",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1, 1, 0, 0],\n",
+       "        [1, 1, 1, 1, 1, 1, 1, 0]])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds_collated['attention_mask']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "de91c2bb-3b90-4e67-b11c-a3c1aa9c5d49",
    "metadata": {},
@@ -4420,8 +4691,304 @@
   },
   {
    "cell_type": "markdown",
-   "id": "018520f6-91e7-4e24-a390-6382f84288b0",
+   "id": "37986d08-ba17-4862-a8ae-5599224d6f9d",
    "metadata": {},
+   "source": [
+    "#### DataCollatorForSeq2Seq\n",
+    "\n",
+    "用于翻译任务的动态padding，不仅会对 `input_ids` 进行padding，还会对输出序列的 `labels` 进行padding。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "1b19801c-993e-41b0-91a1-3d8cc59f4dd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import Dataset\n",
+    "from transformers import BertTokenizer, DataCollatorForSeq2Seq, BertForQuestionAnswering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "778f4281-22f7-4c9c-a59b-90f1d0aae37c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at C:\\Users\\Drivi\\Python-Projects\\DataAnalysis\\bert-pretrained-models\\bert-base-uncased were not used when initializing BertForQuestionAnswering: ['cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.predictions.decoder.weight']\n",
+      "- This IS expected if you are initializing BertForQuestionAnswering from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForQuestionAnswering from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of BertForQuestionAnswering were not initialized from the model checkpoint at C:\\Users\\Drivi\\Python-Projects\\DataAnalysis\\bert-pretrained-models\\bert-base-uncased and are newly initialized: ['qa_outputs.bias', 'qa_outputs.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_path = os.path.join(LOCAL_MODELS_PATH, 'bert-base-uncased')\n",
+    "tokenizer = BertTokenizer.from_pretrained(model_path)\n",
+    "model = BertForQuestionAnswering.from_pretrained(model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "2dce206f-b401-4df8-a036-c21abc19f672",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['text', 'text_target'],\n",
+       "    num_rows: 3\n",
+       "})"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 手动构造数据\n",
+    "d = {\n",
+    "    'text': ['we get samples of varying length', 'test dynamic padding', 'this is another sentence.'],\n",
+    "    'text_target': ['target sentence', 'target sentence for source 2', 'another target sentence']\n",
+    "}\n",
+    "ds = Dataset.from_dict(d)\n",
+    "ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "f83c7725-1612-4819-b768-4aee06f46fca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess(samples):\n",
+    "    # 这里没有使用 padding 参数\n",
+    "    return tokenizer(text=samples['text'], text_target=samples['text_target'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "21f83e61-8756-4ea9-8d95-fc7de3c4ed45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "760901d127954057b930438a4e5f74da",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ds_token = ds.map(preprocess, batched=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "93376bc9-b432-4ede-815d-039bd6931a21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['text', 'text_target', 'input_ids', 'token_type_ids', 'attention_mask', 'labels'],\n",
+       "    num_rows: 3\n",
+       "})"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds_token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "ca196d4b-29a9-4333-a8bc-ff7987add987",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'text': 'we get samples of varying length', 'text_target': 'target sentence'}"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "826bd17c-3c18-47d0-bc7f-290224c84a7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'text': 'we get samples of varying length',\n",
+       " 'text_target': 'target sentence',\n",
+       " 'input_ids': [101, 2057, 2131, 8168, 1997, 9671, 3091, 102],\n",
+       " 'token_type_ids': [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1],\n",
+       " 'labels': [101, 4539, 6251, 102]}"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds_token[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "1a4c01b7-8be2-46c8-8d88-eb83ac6a3441",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_collator = DataCollatorForSeq2Seq(tokenizer, model=model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "14e10c96-3518-4e8b-8d41-4eeea8092ac5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_token_list = [ds_token[i] for i in range(0,3)]\n",
+    "ds_token_list = [{k: v for k, v in d.items() if k not in ['text', 'text_target']} for d in ds_token_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "a246e7a1-7e2a-4bc8-bba3-84d795104a1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'input_ids': [101, 2057, 2131, 8168, 1997, 9671, 3091, 102],\n",
+       "  'token_type_ids': [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "  'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "  'labels': [101, 4539, 6251, 102]},\n",
+       " {'input_ids': [101, 3231, 8790, 11687, 4667, 102],\n",
+       "  'token_type_ids': [0, 0, 0, 0, 0, 0],\n",
+       "  'attention_mask': [1, 1, 1, 1, 1, 1],\n",
+       "  'labels': [101, 4539, 6251, 2005, 3120, 1016, 102]},\n",
+       " {'input_ids': [101, 2023, 2003, 2178, 6251, 1012, 102],\n",
+       "  'token_type_ids': [0, 0, 0, 0, 0, 0, 0],\n",
+       "  'attention_mask': [1, 1, 1, 1, 1, 1, 1],\n",
+       "  'labels': [101, 2178, 4539, 6251, 102]}]"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds_token_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "49771ce7-e37c-4d0c-b050-79b0df1d2048",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch = data_collator(ds_token_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "1bef7e0b-ece8-4e80-8e65-55a890fb794c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[  101,  2057,  2131,  8168,  1997,  9671,  3091,   102],\n",
+       "        [  101,  3231,  8790, 11687,  4667,   102,     0,     0],\n",
+       "        [  101,  2023,  2003,  2178,  6251,  1012,   102,     0]])"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# input_ids 里，填充值为 0\n",
+    "batch['input_ids']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "ae62b9f3-e157-4b05-b01a-17a32ea92598",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 101, 4539, 6251,  102, -100, -100, -100],\n",
+       "        [ 101, 4539, 6251, 2005, 3120, 1016,  102],\n",
+       "        [ 101, 2178, 4539, 6251,  102, -100, -100]])"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# labels 里 padding 的部分 使用了 -100 进行填充\n",
+    "batch['labels']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "018520f6-91e7-4e24-a390-6382f84288b0",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "-----\n",
     "### Trainer\n",
